--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <div id="app"></div>
         
     <script type="text/babel">
-        function MojKomponent(){
+        function App({title = "Modal", content}){
             return(
                 <div>
-                    <h1>Witaj świecie!</h1>
-                    <p>Opis</p>
+                    <h1>{title}</h1>
+                    <p>{content}</p>
                 </div>
             )
         }
+
         function MojKomponent2(){
             return(
                 <div>
@@ -32,8 +33,10 @@
 
         ReactDOM.render((
             <div>
-                <MojKomponent />
-                <MojKomponent2 />
+                <App 
+                    title="I co?"
+                    content="ok?"
+                />
             </div>
         ),
         document.getElementById('app')
