--- a/index.html
+++ b/index.html
@@ -65,28 +65,42 @@
             )
         }
         
-        function ContactItem({ login, name, department }){
-            const imgUrl = 'https://api.adorable.io/avatars/55/${login}.png';
+        class ContactItem extends React.Component{
+            render(){
+                const { login, name, department } = this.props;
+                const imgUrl = 'https://api.adorable.io/avatars/55/${login}.png';
 
-            return (
-                <li className="item">
+                return (
+                    <li className="item">
                     <img src={imgUrl} className="ui mini rounded image" />
                     <div className="content">
                         <h4 className="header">{name}</h4>
                         <div className="description">{department}</div>
                     </div>
                 </li>
-            )
+                );
+            }
         }
+
+        // function ContactItem({ login, name, department }){
+        //     const imgUrl = 'https://api.adorable.io/avatars/55/${login}.png';
+
+        //     return (
+        //         <li className="item">
+        //             <img src={imgUrl} className="ui mini rounded image" />
+        //             <div className="content">
+        //                 <h4 className="header">{name}</h4>
+        //                 <div className="description">{department}</div>
+        //             </div>
+        //         </li>
+        //     )
+        // }
 
         ReactDOM.render((
             <div>
                 <App />
             </div>
-        ),
-        document.getElementById('app')
-        );
+        ), document.getElementById('app'));
     </script>
 </body>
-
 </html>
